--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+Packages/com.ptc.vuforia.engine-10.29.6.tgz filter=lfs diff=lfs merge=lfs -text
